--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="password">Password</string>
     <string name="register_prompt">Don\'t have an account?</string>
     <string name="register">Register</string>
+    <string name="report">Report</string>
+    <string name="category">Category</string>
+    <string name="report_city">City</string>
+    <string name="report_description">Description</string>
+    <string name="report_location">Location</string>
 </resources>
