--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="report_city">City</string>
     <string name="report_description">Description</string>
     <string name="report_location">Location</string>
+    <string-array name="cities">
+        <item>Shah Alam</item>
+        <item>Klang</item>
+        <item>Petaling Jaya</item>
+    </string-array>
 </resources>
