Implemented function to populate RecyclerView on home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
         <item>Klang</item>
         <item>Petaling Jaya</item>
     </string-array>
+    <string name="refresh_list">Refresh</string>
 </resources>
